--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "json-server --watch db.json --port 3000"
+    "start": "json-server db.json --port $PORT",   
+    "dev": "json-server db.json --port 3000"      
   },
   "keywords": [],
   "author": "",
